possible wrapping fix for mobile status pills

--- a/src/css/overviewDisplay.module.css
+++ b/src/css/overviewDisplay.module.css
@@ -3,6 +3,7 @@
 .statusPill {
     width: min-content;
     text-wrap: nowrap;
+    white-space: nowrap;
 
     padding: 2px 8px;
     border-radius: 100px;
